# learn-test

./: mkdocs.yml
demos/ansible/: k3s.yml
demos/ansible/inventory/: k3sone
demos/clientgo/clientfoo/: .gitignore  Dockerfile  Makefile  go.mod  go.sum  main.go  readme.md
demos/clientgo/clientqps/: .gitignore  go.mod  go.sum  main.go
demos/clientgo/critest/: .gitignore  container-config.json  go.mod  go.sum  main.go  pod-config.json  readme.md
demos/dbstest/: Cargo.toml
demos/dbstest/src/: main.rs
demos/fstools/xfsshow/: Cargo.toml  readme.md
demos/fstools/xfsshow/src/: dqblk_xfs_binding.rs  dqblk_xfs_util.rs  main.rs  quota_binding.rs
demos/kubers/hello/: Cargo.toml  Dockerfile  Makefile  Readme.md  hello-pod.yaml
demos/kubers/hello/src/: main.rs
demos/rustvmm/dbs_event_manager/: Cargo.toml
demos/rustvmm/dbs_event_manager/src/: main.rs
demos/rustvmm/dbs_load_kernel/: Cargo.toml  readme.md
demos/rustvmm/dbs_load_kernel/src/: main.rs
demos/rustvmm/dbs_virtio_foo/: Cargo.toml
demos/rustvmm/dbs_virtio_foo/src/: main.rs
demos/rustvmm/elf_kernel/: Cargo.toml  readme.md
demos/rustvmm/elf_kernel/src/: main.rs
demos/rustvmm/foo_mmio/: Cargo.toml
demos/rustvmm/foo_mmio/src/: main.rs
demos/rustvmm/pvh_boot/: Cargo.toml
demos/rustvmm/pvh_boot/src/: main.rs
demos/uefi/my-image/: Cargo.toml
demos/uefi/my-input/: Cargo.toml
demos/uefi/my-pi/: Cargo.toml
demos/uefi/my-uefi-app/: Cargo.toml
docs/: index.md
docs/migrate/: migrate_sender_tcp_first_package.txt  qemu-migrate-bitmap.md  qemu-migrate-description.md  qemu-migrate-global-variable.md  virsh-save-command.md
docs/qemu-command/: qemu-monitor.md
docs/qemu-guest-agent/: qemu-guest-agent-description.md
docs/virtio/: virtio_blk.md
k8s/client-demo/: .gitignore  README.md  build.sh  do_create_crt.sh  go.mod  go.sum
k8s/client-demo/cmd/: 001-burstable-cpu-shares.go
k8s/kubelet/csi-plugin-reg/: .gitignore  go.mod  go.sum  main.go
k8s/storage/csi-demo/: .gitignore  go.mod  go.sum  main.go
k8s/tests/keda/: 001-demo-dep-hpa-cpu.yaml  002-demo-dep-keda-cpu.yaml  003-demo-dep-keda-k8s-workload.yaml  test-dep.yaml
k8s/tests/qos-priority/: 001-besteffort.yaml  002-burstable-500m.yaml  003-burstable-1c.yaml  004-guaranteed-5c.yaml  005-besteffort-cluster-critical.yaml  006-besteffort-node-critical.yaml  007-burstable-cluster-critical.yaml  008-burstable-node-critical.yaml  do_create.sh
k8s/tests/stress/: 001-fio.yaml  002-stress-memory.yaml  003-stress-cpu.yaml  004-stress-memory-cpu.yaml
rdma/hello/getinfo/: build.sh  main.c
rdma/hello/rdmacs/: .gitignore  build.sh  main.c
(+12 files in other folders)
