[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
tokio = { version = "1.14.0", features = ["full"] }
#kube = { version = "0.83.0", features = ["runtime", "derive"] }
kube = { version = "0.83.0", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.18.0", features = ["v1_23"] }
