[package]
name = "dbs_load_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbs-arch = "0.2.1"
dbs-boot = "0.3.0"
dbs-legacy-devices = "0.1.1"
linux-loader = "0.6.0"
kvm-ioctls = "0.12.0"
kvm-bindings = "0.6.0"
vm-memory = { version = "0.9.0", features = [ "backend-mmap", "backend-atomic" ] }
vmm-sys-util = "0.11.0"
vm-superio = "0.5.0"
