[package]
name = "elf_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-ioctls = "0.11.0"
kvm-bindings = "0.6.0"
vm-memory = { version = "0.10.0", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
libc = "0.2.133"
linux-loader = "0.8.1"
vm-superio = "0.7.0"
vmm-sys-util = "0.11.1"
